@@ -602,6 +602,7 @@ Some default configuration options have changed:
 * (bug 6006) Allow hiding the password change fields using an authentication plugin
 * (bug 6489) Use appropriate link colour on Special:Shortpages
 * Added formatnum magic word
+* Added Javanese localization (jv)
 
 == Compatibility ==
 
